--- a/EmotionCore/EmotionCore.csproj
+++ b/EmotionCore/EmotionCore.csproj
@@ -117,6 +117,8 @@
     <Compile Include="Libraries\TiledSharp\zlib\ZlibStream.cs" />
     <Compile Include="Libraries\Unix.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="src\Debug\Logging\DefaultLogger.cs" />
+    <Compile Include="src\Debug\Logging\LoggingProvider.cs" />
     <Compile Include="src\Engine\ContinuousAction.cs" />
     <Compile Include="src\Engine\Threading\ALThread.cs" />
     <Compile Include="src\Engine\Threading\ThreadManager.cs" />
