Many Fixes + System.Numerics + Net462
- Removed SoulLib as a dependency.
 - Added helper functions to the Helper class.
 - Added mathematical helper functions to the MathExtensions class.
- Implemented System.Numerics for Vectors and Matrices allowing for SIMD boosted calculations.
- Line drawing thickness is now a float.
- Emotion now uses .Net version 4.6.2
- Fixed a couple of errors pertaining to the closing of the window.
 - These errors were logged but were natural for a closing application.
- Other Fixes

--- a/EmotionCore/EmotionCore.nuspec
+++ b/EmotionCore/EmotionCore.nuspec
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package >
+<package>
   <metadata>
     <id>Emotion</id>
     <version>0</version>
@@ -16,11 +16,14 @@
     <releaseNotes>Pre-release debug version.</releaseNotes>
     <copyright>Copyright 2018</copyright>
     <tags>game-engine game engine emotion opengl gles opegles cross-platform game-development linux macos freeimage freetype openal</tags>
+    <dependencies>
+        <dependency id="System.Numerics.Vectors" version="4.5.0" />
+    </dependencies>
   </metadata>
   <files>
-	<file src="bin\Debug-GLES\EmotionCore.dll" target="lib" />
-	<file src="bin\Debug-GLES\EmotionCore.xml" target="lib" />
+	<file src="bin\Debug-GLES\EmotionCore.dll" target="lib\net462" />
+	<file src="bin\Debug-GLES\EmotionCore.xml" target="lib\net462" />
 	<file src="bin\Debug-GLES\**" target="Build" />
 	<file src="Emotion.targets" target="Build" />
-</files>
+  </files>
 </package>
