--- a/EmotionCore/EmotionCore.csproj
+++ b/EmotionCore/EmotionCore.csproj
@@ -4,7 +4,7 @@
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <ProjectGuid>{723C67BD-47EE-482D-BC0D-728211D7F5F1}</ProjectGuid>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <TargetFrameworkProfile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
@@ -44,12 +44,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="FreeImage-dotnet-core, Version=4.3.6.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\FreeImage-dotnet-core.4.3.6\lib\net45\FreeImage-dotnet-core.dll</HintPath>
-      <EmbedInteropTypes>False</EmbedInteropTypes>
+      <HintPath>..\packages\FreeImage-dotnet-core.4.3.6\lib\net461\FreeImage-dotnet-core.dll</HintPath>
     </Reference>
     <Reference Include="Jint, Version=0.0.0.0, Culture=neutral, PublicKeyToken=2e92ba9c8d81157f, processorArchitecture=MSIL">
-      <HintPath>..\packages\Jint.2.11.58\lib\net45\Jint.dll</HintPath>
-      <EmbedInteropTypes>False</EmbedInteropTypes>
+      <HintPath>..\packages\Jint.2.11.58\lib\net451\Jint.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp">
       <EmbedInteropTypes>False</EmbedInteropTypes>
@@ -61,21 +59,10 @@
       <HintPath>..\packages\SharpFont.4.0.1\lib\net45\SharpFont.dll</HintPath>
       <EmbedInteropTypes>False</EmbedInteropTypes>
     </Reference>
-    <Reference Include="Soul.Core, Version=9.9.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>Libraries\Soul\Soul.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="Soul.Logging, Version=9.9.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>Libraries\Soul\Soul.Logging.dll</HintPath>
-    </Reference>
-    <Reference Include="Soul.Utilities, Version=9.9.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>Libraries\Soul\Soul.Utilities.dll</HintPath>
-    </Reference>
     <Reference Include="System">
       <EmbedInteropTypes>False</EmbedInteropTypes>
     </Reference>
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core">
       <EmbedInteropTypes>False</EmbedInteropTypes>
     </Reference>
@@ -84,6 +71,13 @@
     </Reference>
     <Reference Include="System.Drawing">
       <EmbedInteropTypes>False</EmbedInteropTypes>
+    </Reference>
+    <Reference Include="System.Numerics" />
+    <Reference Include="System.Numerics.Vectors, Version=4.1.4.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Numerics.Vectors.4.5.0\lib\net46\System.Numerics.Vectors.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Runtime, Version=4.1.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Runtime.4.3.0\lib\net462\System.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml.Linq">
       <EmbedInteropTypes>False</EmbedInteropTypes>
@@ -121,7 +115,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\Debug\Logging\DefaultLogger.cs" />
     <Compile Include="src\Debug\Logging\LoggingProvider.cs" />
+    <Compile Include="src\Debug\Logging\SoulLogging\ImmediateLoggingService.cs" />
+    <Compile Include="src\Debug\Logging\SoulLogging\LoggingService.cs" />
     <Compile Include="src\Engine\ContinuousAction.cs" />
+    <Compile Include="src\Engine\Helpers.cs" />
+    <Compile Include="src\Engine\MathExtension.cs" />
     <Compile Include="src\Engine\ThreadManager.cs" />
     <Compile Include="src\Game\Text\TypewriterRichText.cs" />
     <Compile Include="src\Game\UI\BasicTextBg.cs" />
@@ -156,10 +154,8 @@
     <Compile Include="src\Graphics\TransformationStack.cs" />
     <Compile Include="src\Graphics\Batching\VertexData.cs" />
     <Compile Include="src\IO\Asset.cs" />
-    <Compile Include="src\Primitives\Matrix4.cs" />
-    <Compile Include="src\Primitives\Point.cs" />
+    <Compile Include="src\Primitives\Extensions.cs" />
     <Compile Include="src\Primitives\Transform.cs" />
-    <Compile Include="src\Primitives\Vector3.cs" />
     <Compile Include="src\Sound\ALThread.cs" />
     <Compile Include="src\Sound\SoundStatus.cs" />
     <Compile Include="src\Game\Animation\AnimatedTexture.cs" />
@@ -200,7 +196,6 @@
     <Compile Include="src\Game\Tiled\AnimatedTile.cs" />
     <Compile Include="src\Primitives\Color.cs" />
     <Compile Include="src\Primitives\Rectangle.cs" />
-    <Compile Include="src\Primitives\Vector2.cs" />
     <Compile Include="src\Debug\Debugger.cs" />
     <Compile Include="src\Meta.cs" />
   </ItemGroup>
@@ -261,7 +256,6 @@
     <None Include="Libraries\x86\openal32.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <Compile Include="src\Primitives\Vector4.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
