--- a/EmotionCore/packages.config
+++ b/EmotionCore/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <packages>
-  <package id="FreeImage-dotnet-core" version="4.3.6" targetFramework="net45" />
-  <package id="Jint" version="2.11.58" targetFramework="net45" />
+  <package id="FreeImage-dotnet-core" version="4.3.6" targetFramework="net462" />
+  <package id="Jint" version="2.11.58" targetFramework="net462" />
   <package id="OpenTK" version="3.0.1" targetFramework="net45" />
   <package id="SharpFont" version="4.0.1" targetFramework="net45" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net462" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net462" />
 </packages>
