The InputManager is now created by the Host.

--- a/EmotionCore/EmotionCore.csproj
+++ b/EmotionCore/EmotionCore.csproj
@@ -161,6 +161,7 @@
     <Compile Include="src\Graphics\Batching\MapBuffer.cs" />
     <Compile Include="src\Graphics\TransformationStack.cs" />
     <Compile Include="src\Graphics\Batching\VertexData.cs" />
+    <Compile Include="src\Input\IInputManager.cs" />
     <Compile Include="src\IO\Asset.cs" />
     <Compile Include="src\Primitives\Extensions.cs" />
     <Compile Include="src\Primitives\Transform.cs" />
@@ -194,7 +195,7 @@
     <Compile Include="src\IO\AssetLoader.cs" />
     <Compile Include="src\Engine\Context.cs" />
     <Compile Include="src\Input\MouseKeys.cs" />
-    <Compile Include="src\Input\InputManager.cs" />
+    <Compile Include="src\Engine\Hosting\Desktop\OtkInputManager.cs" />
     <Compile Include="Libraries\Windows.cs" />
     <Compile Include="src\Game\Camera\CameraBase.cs" />
     <Compile Include="src\Game\Camera\TargetCamera.cs" />
