Code Style, AssetLoader Bug

--- a/EmotionCore/EmotionCore.csproj
+++ b/EmotionCore/EmotionCore.csproj
@@ -208,6 +208,7 @@
     <Compile Include="src\Meta.cs" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Embedded\Shaders\ColorFrag.glsl" />
     <None Include="FreeImage-dotnet-core.dll.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
