--- a/EmotionCore/EmotionCore.csproj
+++ b/EmotionCore/EmotionCore.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Libraries\TiledSharp\zlib\ZlibStream.cs" />
     <Compile Include="Libraries\Unix.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="src\Debug\Logging\NetworkLogger.cs" />
     <Compile Include="src\Debug\Logging\DefaultLogger.cs" />
     <Compile Include="src\Debug\Logging\LoggingProvider.cs" />
     <Compile Include="src\Debug\Logging\SoulLogging\ImmediateLoggingService.cs" />
