--- a/EmotionCore/EmotionCore.csproj
+++ b/EmotionCore/EmotionCore.csproj
@@ -95,7 +95,7 @@
   <ItemGroup>
     <Compile Include="Libraries\CurrentPlatform.cs" />
     <Compile Include="Libraries\PlatformName.cs" />
-    <Compile Include="Libraries\Steamworks Net\SteamModule.cs" />
+    <Compile Include="Libraries\Steamworks\SteamModule.cs" />
     <Compile Include="Libraries\TiledSharp\ImageLayer.cs" />
     <Compile Include="Libraries\TiledSharp\Layer.cs" />
     <Compile Include="Libraries\TiledSharp\Map.cs" />
@@ -216,10 +216,10 @@
     <Compile Include="src\Meta.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="FreeImage-dotnet-core.dll.config">
+    <None Include="EmotionCore.dll.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Libraries\Steamworks Net\Steamworks.NET.dll.config">
+    <None Include="FreeImage-dotnet-core.dll.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="Libraries\x64\FreeImage.dll">
@@ -228,10 +228,10 @@
     <None Include="Libraries\x64\FreeImage.dylib">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Libraries\x64\FreeImage.so">
+    <None Include="Libraries\Linux\FreeImage.so">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Libraries\x64\freetype.so">
+    <None Include="Libraries\Linux\freetype.so">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="Libraries\x64\libfreetype.6.dylib">
@@ -240,16 +240,16 @@
     <None Include="Libraries\x64\libpng14.14.dylib">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Libraries\x64\libsndio.so.6.1">
+    <None Include="Libraries\Linux\libsndio.so.6.1">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="Libraries\x64\libsteam_api.dylib">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Libraries\x64\libsteam_api.so">
+    <None Include="Libraries\Linux\libsteam_api.so">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Libraries\x64\openal32.so">
+    <None Include="Libraries\Linux\openal32.so">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="OpenTK.dll.config">
@@ -262,6 +262,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="SharpFont.dll.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Steamworks.NET.dll.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
@@ -283,11 +286,10 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Libraries\Steamworks Net\Steamworks.NET-Mono.dll">
+    <Content Include="Libraries\Steamworks\Steamworks.NET-Mono.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Libraries\Steamworks Net\Steamworks.NET.dll" />
-    <Content Include="Libraries\Steamworks Net\Steamworks.NET.pdb" />
+    <Content Include="Libraries\Steamworks\Steamworks.NET.dll" />
     <Content Include="Libraries\x64\steam_api64.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
