--- a/EmotionCore/OpenTK.dll.config
+++ b/EmotionCore/OpenTK.dll.config
@@ -1,8 +1,7 @@
 <configuration>
   <dllmap os="linux" dll="opengl32.dll" target="libGL.so.1"/>
   <dllmap os="linux" dll="glu32.dll" target="libGLU.so.1"/>
-  <dllmap os="linux" dll="openal32.dll" target="libopenal.so.1"/>
-  <dllmap os="linux" dll="openal32.dll" target="./Libraries/Linux/openal32.so"/>
+  <dllmap os="linux" dll="openal32.dll" target="/Libraries/Linux/openal32.so"/>
   <dllmap os="linux" dll="alut.dll" target="libalut.so.0"/>
   <dllmap os="linux" dll="opencl.dll" target="libOpenCL.so"/>
   <dllmap os="linux" dll="libX11" target="libX11.so.6"/>
@@ -10,7 +9,7 @@
   <dllmap os="linux" dll="SDL2.dll" target="libSDL2-2.0.so.0"/>
   <dllmap os="linux" dll="libc" target="libc.so.6"/>
   <dllmap os="osx" dll="opengl32.dll" target="/System/Library/Frameworks/OpenGL.framework/OpenGL"/>
-  <dllmap os="osx" dll="openal32.dll" target="/System/Library/Frameworks/OpenAL.framework/OpenAL" />
+  <dllmap os="osx" dll="openal32.dll" target="/Libraries/MacOS/libopenal.1.dylib" />
   <dllmap os="osx" dll="alut.dll" target="/System/Library/Frameworks/OpenAL.framework/OpenAL" />
   <dllmap os="osx" dll="libGLES.dll" target="/System/Library/Frameworks/OpenGLES.framework/OpenGLES" />
   <dllmap os="osx" dll="libGLESv1_CM.dll" target="/System/Library/Frameworks/OpenGLES.framework/OpenGLES" />
