Removed the need for the AppleRun script.

--- a/EmotionCore/EmotionCore.dll.config
+++ b/EmotionCore/EmotionCore.dll.config
@@ -4,6 +4,7 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
   </startup>
-  <dllmap dll="libdl.so" target="libdl" os="linux" />
-  <dllmap dll="libdl.so" target="libdl.so.2" os="linux" />
+  <dllmap dll="libdl" target="libdl" os="linux" />
+  <dllmap dll="libdl" target="libdl.so.2" os="linux" />
+  <dllmap dll="libdl" target="libdl.dylib" os="osx" />
 </configuration>
