--- a/EmotionCore/FreeImage-dotnet-core.dll.config
+++ b/EmotionCore/FreeImage-dotnet-core.dll.config
@@ -2,5 +2,5 @@
 
 <configuration>
   <dllmap dll="FreeImage" target="/Libraries/Linux/FreeImage.so" os="linux" />
-  <dllmap dll="FreeImage" target="/Libraries/MacOS/FreeImage.dylib" os="osx" />
+  <dllmap dll="FreeImage" target="./Libraries/MacOS/FreeImage.dylib" os="osx" />
 </configuration>
