--- a/EmotionCore/SharpFont.dll.config
+++ b/EmotionCore/SharpFont.dll.config
@@ -2,6 +2,6 @@
 
 <configuration>
   <dllmap dll="freetype6" os="linux" target="/Libraries/Linux/freetype.so" />
-  <dllmap dll="freetype6" os="osx" target="/Libraries/MacOS/libfreetype.6.dylib" />
+  <dllmap dll="freetype6" os="osx" target="./Libraries/MacOS/libfreetype.6.dylib" />
   <dllmap dll="freetype6" os="windows" target="/Libraries/x64/freetype6.dll" />
 </configuration>
