Fixed wrong Linux dll maps.

--- a/EmotionCore/OpenTK.dll.config
+++ b/EmotionCore/OpenTK.dll.config
@@ -1,7 +1,7 @@
 <configuration>
   <dllmap os="linux" dll="opengl32.dll" target="libGL.so.1"/>
   <dllmap os="linux" dll="glu32.dll" target="libGLU.so.1"/>
-  <dllmap os="linux" dll="openal32.dll" target="/Libraries/Linux/openal32.so"/>
+  <dllmap os="linux" dll="openal32.dll" target="./Libraries/Linux/openal32.so"/>
   <dllmap os="linux" dll="alut.dll" target="libalut.so.0"/>
   <dllmap os="linux" dll="opencl.dll" target="libOpenCL.so"/>
   <dllmap os="linux" dll="libX11" target="libX11.so.6"/>
