--- a/EmotionCore/SharpFont.dll.config
+++ b/EmotionCore/SharpFont.dll.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
 <configuration>
-  <dllmap dll="freetype6" os="linux" target="/Libraries/Linux/freetype.so" />
+  <dllmap dll="freetype6" os="linux" target="./Libraries/Linux/freetype.so" />
   <dllmap dll="freetype6" os="osx" target="./Libraries/MacOS/libfreetype.6.dylib" />
-  <dllmap dll="freetype6" os="windows" target="/Libraries/x64/freetype6.dll" />
+  <dllmap dll="freetype6" os="windows" target="./Libraries/x64/freetype6.dll" />
 </configuration>
