--- a/EmotionCore/Steamworks.NET.dll.config
+++ b/EmotionCore/Steamworks.NET.dll.config
@@ -1,5 +1,5 @@
 <configuration>
 	<dllmap os="osx" dll="CSteamworks" target="CSteamworks.bundle/Contents/MacOS/CSteamworks"/>
-	<dllmap os="linux" dll="steam_api" target="Libraries/Linux/libsteam_api.so" />
+	<dllmap os="linux" dll="steam_api" target="./Libraries/Linux/libsteam_api.so" />
   <dllmap os="osx" dll="steam_api" target="./Libraries/MacOS/libsteam_api.dylib" />
 </configuration>
