More Sound Tests and Sound Improvements and Documentation
- Additionally changed the map buffer to a streaming buffer.

--- a/Emotion.Tests/Emotion.Tests.csproj
+++ b/Emotion.Tests/Emotion.Tests.csproj
@@ -95,6 +95,9 @@
     <Content Include="Assets\Sounds\kids.wav">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Assets\Sounds\money.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Assets\Sounds\noice.wav">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
