--- a/EmotionCore/EmotionCore.csproj
+++ b/EmotionCore/EmotionCore.csproj
@@ -146,19 +146,15 @@
     <Compile Include="src\Game\UI\Layout\CornerAnchor.cs" />
     <Compile Include="src\Game\UI\BasicButton.cs" />
     <Compile Include="src\Game\UI\ParentControl.cs" />
+    <Compile Include="src\Graphics\Batching\GLStreamBuffer.cs" />
     <Compile Include="src\Graphics\Batching\IStreamBuffer.cs" />
-    <Compile Include="src\Graphics\Batching\TriMapBuffer.cs" />
-    <Compile Include="src\Graphics\Batching\QuadMapBuffer.cs" />
+    <Compile Include="src\Graphics\DataType.cs" />
     <Compile Include="src\Graphics\GLThread.cs" />
     <Compile Include="src\Graphics\GraphicsManager.cs" />
     <Compile Include="src\Graphics\ITransformRenderable.cs" />
     <Compile Include="src\Graphics\Texture.cs" />
-    <Compile Include="src\Graphics\Objects\IGLObject.cs" />
-    <Compile Include="src\Graphics\Objects\IndexBuffer.cs" />
     <Compile Include="src\Graphics\Objects\Shader.cs" />
     <Compile Include="src\Graphics\Objects\ShaderProgram.cs" />
-    <Compile Include="src\Graphics\Objects\Buffer.cs" />
-    <Compile Include="src\Graphics\Objects\VertexArray.cs" />
     <Compile Include="src\Graphics\TransformRenderable.cs" />
     <Compile Include="src\Graphics\IRenderable.cs" />
     <Compile Include="src\Graphics\Renderer.cs" />
@@ -170,7 +166,6 @@
     <Compile Include="src\Graphics\Text\TextEffect.cs" />
     <Compile Include="src\Engine\Hosting\IHost.cs" />
     <Compile Include="src\Engine\Hosting\Desktop\OtkWindow.cs" />
-    <Compile Include="src\Graphics\Batching\MapBuffer.cs" />
     <Compile Include="src\Graphics\TransformationStack.cs" />
     <Compile Include="src\Graphics\Batching\VertexData.cs" />
     <Compile Include="src\Input\IInputManager.cs" />
