Namespace movement and API simplification.

--- a/EmotionCore/EmotionCore.csproj
+++ b/EmotionCore/EmotionCore.csproj
@@ -146,17 +146,17 @@
     <Compile Include="src\Game\UI\Layout\CornerAnchor.cs" />
     <Compile Include="src\Game\UI\BasicButton.cs" />
     <Compile Include="src\Game\UI\ParentControl.cs" />
-    <Compile Include="src\Graphics\Batching\GLStreamBuffer.cs" />
-    <Compile Include="src\Graphics\Batching\IStreamBuffer.cs" />
+    <Compile Include="src\Graphics\Base\GLStreamBuffer.cs" />
+    <Compile Include="src\Graphics\IStreamBuffer.cs" />
     <Compile Include="src\Graphics\DataType.cs" />
     <Compile Include="src\Graphics\GLThread.cs" />
-    <Compile Include="src\Graphics\GraphicsManager.cs" />
-    <Compile Include="src\Graphics\ITransformRenderable.cs" />
+    <Compile Include="src\Graphics\Base\GraphicsManager.cs" />
+    <Compile Include="src\Primitives\ITransformRenderable.cs" />
     <Compile Include="src\Graphics\Texture.cs" />
     <Compile Include="src\Graphics\Objects\Shader.cs" />
     <Compile Include="src\Graphics\Objects\ShaderProgram.cs" />
-    <Compile Include="src\Graphics\TransformRenderable.cs" />
-    <Compile Include="src\Graphics\IRenderable.cs" />
+    <Compile Include="src\Primitives\TransformRenderable.cs" />
+    <Compile Include="src\Primitives\IRenderable.cs" />
     <Compile Include="src\Graphics\Renderer.cs" />
     <Compile Include="src\Graphics\Text\Atlas.cs" />
     <Compile Include="src\Graphics\Text\Font.cs" />
@@ -167,7 +167,7 @@
     <Compile Include="src\Engine\Hosting\IHost.cs" />
     <Compile Include="src\Engine\Hosting\Desktop\OtkWindow.cs" />
     <Compile Include="src\Graphics\TransformationStack.cs" />
-    <Compile Include="src\Graphics\Batching\VertexData.cs" />
+    <Compile Include="src\Graphics\VertexData.cs" />
     <Compile Include="src\Input\IInputManager.cs" />
     <Compile Include="src\IO\Asset.cs" />
     <Compile Include="src\IO\AssetSource.cs" />
